# CMakeList.txt : CMake project for week01, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("assignment02")

# Add source to this project's executable.
add_executable (assignment02 "assignment02.cpp" "infix.cpp" "infix.h" "stack.h")

# TODO: Add tests and install targets if needed.
