# CMakeList.txt : CMake project for week01, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("assignment03")

# Add source to this project's executable.
add_executable (assignment03 "assignment03.cpp" "stock.cpp" "stock.h" "queue.h" "dollars.cpp")

# TODO: Add tests and install targets if needed.
